# salesforce_BLIP

./: .gitignore  README.md  pyproject.toml
salesforce_blip/: eval_nocaps.py  eval_retrieval_video.py  pretrain.py  train_caption.py  train_nlvr.py  train_retrieval.py  train_vqa.py
salesforce_blip/data/: __init__.py  coco_karpathy_dataset.py  flickr30k_dataset.py  nlvr_dataset.py  pretrain_dataset.py  video_dataset.py  vqa_dataset.py
salesforce_blip/models/: blip.py  blip_itm.py  blip_nlvr.py  blip_pretrain.py  blip_retrieval.py  blip_vqa.py  med.py
