[tool.poetry]
name = "salesforce_blip"
version = "1.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.15.0"
fairscale = "^0.4.4"
pycocoevalcap = "^1.2"
timm = "^0.4.12"

[tool.poetry.dev-dependencies]
artifactory-twine = "^0.0.8"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifactory.secureserver.net/artifactory/api/pypi/python-virt/simple"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
